resources/nginx-service/base/nginx-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
